copied content and styled

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./images/favicon.png" />
-    <title>DangerGrid the game</title>
+    <title>DUCKER the game</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nabla&display=swap"
       rel="stylesheet"
     />
     <script
@@ -20,7 +21,7 @@
   <body>
     <div class="game-container">
       <header>
-        <span class="title">DangerGrid<i class="fa-solid fa-burst"></i></span
+        <span class="title">Ducker</span
         ><span class="score-panel"
           >score: <span class="score">00000</span></span
         >
@@ -38,7 +39,7 @@
       <small
         >coded by ▼ Nesli Parmaksizoglu<br />and open sourced on
         <a
-          href="https://github.com/nesliprm/bcw-game-board"
+          href="https://github.com/nesliprm/bcw-ducker-game"
           target="_blank"
           title="go to Github"
           >GitHub</a
