added loops, styled the grid

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <div class="game-container">
       <header>
         <span class="title">Ducker</span
-        ><span class="score-panel"
-          >score: <span class="score">00000</span></span
-        >
+        ><span class="timer">time: <span class="time">00000</span></span>
       </header>
       <div class="info-text"></div>
       <main class="game-board">
