--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   <body>
     <div class="game-container">
       <header>
-        <span class="title">Ducker</span
-        ><span class="timer">time: <span class="time">00000</span></span>
+        <span class="title">Ducker</span><span class="timer">00015</span>
       </header>
       <div class="info-text"></div>
       <main class="game-board">
