--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <body>
     <div class="game-container">
       <header>
-        <span class="title">Ducker</span><span class="timer">00015</span>
+        <span class="title">Ducker</span
+        ><span class="timer-text">time: <span class="timer">00015</span></span>
       </header>
       <div class="info-text"></div>
       <main class="game-board">
