cleaned useless classes, added dev notes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <span class="title">Ducker</span
         ><span class="timer-text">time: <span class="timer">00015</span></span>
       </header>
-      <div class="info-text"></div>
+      <div class="info-text">
+        Help the duck cross the board within 20 seconds using the arrow keys or
+        WASD. Don't get hit by vehicles or fall into the water!
+      </div>
       <main class="game-board">
         <div class="grid"></div>
       </main>
